OrderingPage: fix overflow bug

--- a/login-panel/src/Pages/index.css
+++ b/login-panel/src/Pages/index.css
@@ -9,6 +9,13 @@ body, html {
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 }
 
+.root {
+    width: 100%;
+    min-height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .container {
     background-color: #ffffff;
@@ -43,4 +50,13 @@ body, html {
     justify-content: space-between;
     margin-top: 16px; /* 2 * theme.spacing(2) */
     margin-bottom: 20px;
+}
+
+.content-wrap {
+    width: 100%;
+    max-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 20px;
 }
